implement float layout

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
         <article class="product">
+
             <h2 class="product__heading">Converse Chunk Taylor all start low top</h2>
             <img src="img/challenges.jpg" alt="shoes" class="product__img">
+           <div class="container">
             <p class="product__price">$65.00</p>
             <p class="product__shipping">Free shipping</p>
             <p class="product__paragraph">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.</p>
@@ -23,7 +25,7 @@
              <div class="color color__green"></div>
              <div class="color color__brown"></div>
            </div>
-           
+          </div>
             <ul class="product__details-list">
                 <p class="product__details-heading">Product Details</p>
                 <li class="detail-item">Lightweight, durable canvas sneaker</li>
