add flex layout to pricing and shiping, divide content into components

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
         <article class="product">
             <h2 class="product__heading">Converse Chunk Taylor all start low top</h2>
             <img src="img/challenges.jpg" alt="shoes" class="product__img">
-            <p class="product__price">$65.00</p>
-            <p class="product__shipping">Free shipping</p>
-            <p class="product__paragraph">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.</p>
+
+          <div class="details">
+            <div class="container">
+              <p class="product__price">$65.00</p>
+              <p class="product__shipping">Free shipping</p>
+            </div>
+              <p class="product__paragraph">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.</p>
             <a href="" class="product__more-info">More Information ➡</a>
 
            <div class="color-boxes">
@@ -22,7 +26,8 @@
              <div class="color color__yellow"></div>
              <div class="color color__green"></div>
              <div class="color color__brown"></div>
-           </div>
+            </div>
+          </div>  
            
             <ul class="product__details-list">
                 <p class="product__details-heading">Product Details</p>
